--- a/gra_business/pom.xml
+++ b/gra_business/pom.xml
@@ -37,6 +37,12 @@
             <artifactId>websocket</artifactId>
             <version>1.0</version>
         </dependency>
+        <!-- 引入hs_ggzy -->
+        <dependency>
+            <groupId>cn.pcshao.hs</groupId>
+            <artifactId>ggzy</artifactId>
+            <version>1.0</version>
+        </dependency>
         <!--生成文档-->
         <dependency>
             <groupId>io.springfox</groupId>
